# columnar

./: CMakeLists.txt  LICENSE  README.md
columnar/: .gitignore  CMakeLists.txt  README.md  columnar.h
columnar/.github/workflows/: ci.yml
columnar/examples/: CMakeLists.txt  basic_usage.cpp  filtering.cpp  particle_analysis.cpp
columnar/include/columnar/: columnar.h
columnar/tests/: CMakeLists.txt  test_column_access.cpp  test_csv_reading.cpp  test_filtering.cpp
columnar/tests/data/: mixed_types.csv  particles.csv
